--- a/Proyecto/src/main/resources/static/index.html
+++ b/Proyecto/src/main/resources/static/index.html
@@ -1,15 +1,102 @@
 <!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
--->
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<link rel="stylesheet" href="style/main.css">
+
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>TITOX Store</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+        <!-- Navegacion del sitio -->
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid justify-content-between">
+                  <a class="navbar-brand" href="#">TITOX STORE</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse menuItems" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Reparaciones</a>
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Catalogo
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <li><a class="dropdown-item" href="#">Videojuegos</a></li>
+                          <li><a class="dropdown-item" href="#">Consolas</a></li>
+                          <li><hr class="dropdown-divider"></li>
+                          <li><a class="dropdown-item" href="#">Videojuegos usados</a></li>
+                        </ul>
+                      </li>
+                      <!-- User dropdown for login/signup -->
+                      <li class="nav-item dropdown me-3">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarUserDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Usuario
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarUserDropdown">
+                          <li><a class="dropdown-item" href="#">Iniciar Sesión</a></li>
+                          <li><a class="dropdown-item" href="#">Registrarse</a></li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
+        </header>
+        <!-- Contenido principal -->
+        <div class="custom-carousel-container">
+            <div id="carouselExample" class="carousel slide">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="assets/img/gamer.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/img/gamer1.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/img/gamer2.png" class="d-block w-100" alt="...">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+
+          <section class="section about-section gray-bg" id="about">
+            <div class="container">
+                <div class="row align-items-center justify-content-around flex-row-reverse">
+                    <div class="col-lg-6">
+                        <div class="about-text">
+                            <h3 class="dark-color">Sobre TITOX Store</h3>
+                            <h4 class="theme-color">UI / UX Designer &amp; Web Developer</h4>
+                            <p>En el corazón de la nostalgia y la pasión por los videojuegos, Titox Store emerge como tu destino predilecto para revivir las glorias del pasado y darles una nueva vida. Somos más que una tienda; somos una comunidad dedicada a preservar la magia de las consolas retro y a celebrar la evolución de los videojuegos.</p>
+                            <div class="btn-bar">
+                                <a class="px-btn theme" href="#">Ver catalogo de videojuevos</a>
+                                <a class="px-btn theme-t" href="#">Agenda una reparación</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-5 text-center">
+                        <img src="assets/img/logo.jpeg" style="height: 315px; width: 315px;">
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
