Agregando cambios al sitio
Agregando cambios al estilo del sitio

--- a/Proyecto/src/main/resources/static/index.html
+++ b/Proyecto/src/main/resources/static/index.html
@@ -15,27 +15,27 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid justify-content-between">
-                  <a class="navbar-brand" href="#">TITOX STORE</a>
+                  <a class="navbar-brand" href="index.html">TITOX STORE</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse menuItems" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Reparaciones</a>
+                        <a class="nav-link" href="FormReparaciones.html">Reparaciones</a>
                       </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           Catalogo
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <li><a class="dropdown-item" href="#">Videojuegos</a></li>
-                          <li><a class="dropdown-item" href="#">Consolas</a></li>
+                          <li><a class="dropdown-item" href="Catalogo.html">Videojuegos</a></li>
+                          <li><a class="dropdown-item" href="Catalogo.html">Consolas</a></li>
                           <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="#">Videojuegos usados</a></li>
+                          <li><a class="dropdown-item" href="Catalogo.html">Videojuegos usados</a></li>
                         </ul>
                       </li>
                       <!-- User dropdown for login/signup -->
@@ -44,8 +44,8 @@
                           Usuario
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarUserDropdown">
-                          <li><a class="dropdown-item" href="#">Iniciar Sesión</a></li>
-                          <li><a class="dropdown-item" href="#">Registrarse</a></li>
+                          <li><a class="dropdown-item" href="login.html">Iniciar Sesión</a></li>
+                          <li><a class="dropdown-item" href="signup.html">Registrarse</a></li>
                         </ul>
                       </li>
                     </ul>
@@ -84,7 +84,7 @@
                     <div class="col-lg-6">
                         <div class="about-text">
                             <h3 class="dark-color">Sobre TITOX Store</h3>
-                            <h4 class="theme-color">UI / UX Designer &amp; Web Developer</h4>
+                            <h4 class="theme-color">Tienda de reparación de videojuegos</h4>
                             <p>En el corazón de la nostalgia y la pasión por los videojuegos, Titox Store emerge como tu destino predilecto para revivir las glorias del pasado y darles una nueva vida. Somos más que una tienda; somos una comunidad dedicada a preservar la magia de las consolas retro y a celebrar la evolución de los videojuegos.</p>
                             <div class="btn-bar">
                                 <a class="px-btn theme" href="#">Ver catalogo de videojuevos</a>
