--- a/Proyecto/src/main/resources/static/login.html
+++ b/Proyecto/src/main/resources/static/login.html
@@ -5,11 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión</title>
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <style>
-        /* Apply styles only to elements inside .card */
         .card {
             margin-top: -50px; /* Adjust for the card's height for vertical centering */
             background-color: #f5f5f5; /* Set background color for the card */
@@ -65,20 +63,16 @@
     <div class="container d-flex align-items-center justify-content-center" style="height: 100vh;">
         <div class="card">
             <form class="card-body" action="/login" method="post">
-                <h3 class="card-title text-center mb-4">Login</h3>
+                <h3 class="card-title text-center mb-4">Iniciar Sesión</h3>
                 <div class="form-group">
-                    <label for="email">Email address</label>
+                    <label for="email">Email</label>
                     <input type="email" class="form-control" id="email" name="email" required>
                 </div>
                 <div class="form-group">
-                    <label for="password">Password</label>
+                    <label for="password">Contraseña</label>
                     <input type="password" class="form-control" id="password" name="password" required>
                 </div>
                 <div class="form-group">
-                    <div class="custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input" id="rememberMe">
-                        <label class="custom-control-label" for="rememberMe">Remember me</label>
-                    </div>
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">Login</button>
             </form>
