--- a/Proyecto/src/main/resources/static/signup.html
+++ b/Proyecto/src/main/resources/static/signup.html
@@ -77,24 +77,24 @@
     <div class="content-container">
         <div class="card">
             <form class="card-body" action="/signup" method="post">
-                <h3 class="card-title text-center mb-4">Sign Up</h3>
+                <h3 class="card-title text-center mb-4">Registro</h3>
                 <div class="form-group">
-                    <label for="username">Username</label>
+                    <label for="username">Usuario</label>
                     <input type="text" class="form-control" id="username" name="username" required>
                 </div>
                 <div class="form-group">
-                    <label for="email">Email address</label>
+                    <label for="email">Email</label>
                     <input type="email" class="form-control" id="email" name="email" required>
                 </div>
                 <div class="form-group">
-                    <label for="password">Password</label>
+                    <label for="password">Contraseña</label>
                     <input type="password" class="form-control" id="password" name="password" required>
                 </div>
                 <div class="form-group">
-                    <label for="confirm-password">Confirm Password</label>
+                    <label for="confirm-password">Confirmar Contraseña</label>
                     <input type="password" class="form-control" id="confirm-password" name="confirmPassword" required>
                 </div>
-                <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
+                <button type="submit" class="btn btn-primary btn-block">Registro</button>
             </form>
         </div>
     </div>
