Agregando cambio en el forms

--- a/Proyecto/src/main/resources/static/FormReparaciones.html
+++ b/Proyecto/src/main/resources/static/FormReparaciones.html
@@ -81,6 +81,10 @@
                 <input type="text" class="form-control" id="lastname" name="lastname" required>
             </div>
             <div class="form-group">
+                <label for="lastname">Correo Electronico</label>
+                <input type="text" class="form-control" id="email" name="email" required>
+            </div>
+            <div class="form-group">
                 <label for="repairDate">Fecha de la Reparación</label>
                 <input type="date" class="form-control" id="repairDate" name="repairDate" required>
             </div>
